<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.SignupActivity">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/signup_img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signup_edit_text_email"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/signup_img_logo"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/signup_img_logo"
            app:layout_constraintTop_toBottomOf="@+id/signup_img_logo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signup_edit_text_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signup_edit_text_name"
            app:layout_constraintStart_toStartOf="@+id/signup_edit_text_name"
            app:layout_constraintTop_toBottomOf="@+id/signup_edit_text_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_text_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="@+id/signup_edit_text_confirmpass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signup_edit_text_confirmpass"
            app:layout_constraintTop_toBottomOf="@+id/signup_edit_text_confirmpass" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Sign Up"
            app:layout_constraintEnd_toEndOf="@+id/signup_edit_text_confirmpass"
            app:layout_constraintStart_toStartOf="@+id/signup_text_forget_password"
            app:layout_constraintTop_toBottomOf="@+id/signup_text_forget_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_text_view_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/have_an_account"
            app:layout_constraintEnd_toEndOf="@+id/signup_btn_signup"
            app:layout_constraintStart_toStartOf="@+id/signup_btn_signup"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn_signup" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_text_view_signup_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up_here"
            app:layout_constraintEnd_toEndOf="@+id/signup_text_view_have_account"
            app:layout_constraintStart_toStartOf="@+id/signup_text_view_have_account"
            app:layout_constraintTop_toBottomOf="@+id/signup_text_view_have_account" />

        <EditText
            android:id="@+id/signup_edit_text_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/signup_edit_text_email"
            app:layout_constraintStart_toStartOf="@+id/signup_edit_text_email"
            app:layout_constraintTop_toBottomOf="@+id/signup_edit_text_email" />

        <EditText
            android:id="@+id/signup_edit_text_confirmpass"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signup_edit_text_password"
            app:layout_constraintStart_toStartOf="@+id/signup_edit_text_password"
            app:layout_constraintTop_toBottomOf="@+id/signup_edit_text_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>